[project]
name = "diagrams-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "gradio>=5.23.1",
    "ipykernel>=7.1.0",
    "ipython>=9.6.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "pip>=25.3",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
]
